# HPshape

./: CONTRIBUTING.md  LICENSE  LICENSE.md  README.md  deploy_and_train.bat  deploy_and_train.sh  requirements.txt  setup.cfg  setup.py
examples/: Word generation with N-Grams (Solution).ipynb  Word generation with N-Grams.ipynb  ngrams.ipynb  ngrams_pascal.ipynb
src/: CustomIt.py  __main__.py  base_config.cfg  custom_it.py  load.py  main.py
tests/: test_main.py  test_pre_proc.py  test_util.py
util/: constants.py  model.py  preProc.py  pre_proc.py  util.py
