[metadata]
name = Named Entities Extraction
version = attr: 0.0
description = Given a text, this program will be able to extract named entities.
long_description = file: README.md,  LICENSE.rst
;no CHANGELOG.rst is provided at the moment.
keywords = name, extraction, NLP
;license = no licence decided yet. maybe MIT in the future.
classifiers =
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
install_requires =
    importlib-metadata; python_version<"3.8"
tests_require =
	unittest

[options.package_data]
; If any package contains *.txt, *.py, or *.rst files, include them:
* = *.txt, *.rst, *.py

[options.entry_points]
console_scripts =
; entry points of the project (one per class afaik)
    executable-name = src.main:main
    executable-name = test.test_main.TestMain:main

[options.extras_require]
pdf = ReportLab>=1.2; RXP
rest = docutils>=0.3; pack ==1.1, ==1.3

[options.packages.find]
exclude =
    examples*
    docs*
    resources*
; TODO exclude tests? not sure what that would do